@@ -1,30 +1,39 @@
 /*******************************************************************************
-* (c) Copyright 2014 Hewlett-Packard Development Company, L.P.
-* All rights reserved. This program and the accompanying materials
-* are made available under the terms of the Apache License v2.0 which accompany this distribution.
-*
-* The Apache License is available at
-* http://www.apache.org/licenses/LICENSE-2.0
-*
-*******************************************************************************/
+ * (c) Copyright 2014 Hewlett-Packard Development Company, L.P.
+ * All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the Apache License v2.0 which accompany this distribution.
+ *
+ * The Apache License is available at
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ *******************************************************************************/
 package io.cloudslang.lang.compiler.scorecompiler;
 
 import io.cloudslang.lang.compiler.SlangTextualKeys;
-import io.cloudslang.lang.compiler.modeller.model.*;
-import io.cloudslang.lang.entities.ExecutableType;
-import io.cloudslang.lang.entities.ScoreLangConstants;
+import io.cloudslang.lang.compiler.modeller.model.Action;
 import io.cloudslang.lang.compiler.modeller.model.Executable;
+import io.cloudslang.lang.compiler.modeller.model.Flow;
+import io.cloudslang.lang.compiler.modeller.model.Operation;
+import io.cloudslang.lang.compiler.modeller.model.Step;
 import io.cloudslang.lang.compiler.modeller.model.Workflow;
+import io.cloudslang.lang.entities.ExecutableType;
+import io.cloudslang.lang.entities.ResultNavigation;
+import io.cloudslang.lang.entities.ScoreLangConstants;
 import io.cloudslang.lang.entities.bindings.Argument;
 import io.cloudslang.lang.entities.bindings.Input;
 import io.cloudslang.lang.entities.bindings.Output;
 import io.cloudslang.lang.entities.bindings.Result;
-import io.cloudslang.lang.compiler.modeller.model.Action;
-import io.cloudslang.lang.compiler.modeller.model.Operation;
-import io.cloudslang.lang.compiler.modeller.model.Step;
-import io.cloudslang.lang.entities.ResultNavigation;
 import io.cloudslang.score.api.ExecutionPlan;
 import io.cloudslang.score.api.ExecutionStep;
+import java.io.Serializable;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Deque;
+import java.util.HashMap;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.ExpectedException;
@@ -33,12 +42,11 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.runners.MockitoJUnitRunner;
 
-import java.io.Serializable;
-import java.util.*;
-
 import static org.junit.Assert.assertEquals;
-import static org.mockito.Matchers.*;
+import static org.mockito.Matchers.anyListOf;
+import static org.mockito.Matchers.anyMapOf;
 import static org.mockito.Matchers.eq;
+import static org.mockito.Matchers.same;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -181,7 +189,7 @@ public class ExecutionPlanBuilderTest {
         assertEquals("different number of execution steps than expected", 3, executionPlan.getSteps().size());
         assertEquals("operation name is different than expected", operationName, executionPlan.getName());
         assertEquals("language name is different than expected", "CloudSlang", executionPlan.getLanguage());
-        assertEquals("begin step is different than expected", new Long(1), executionPlan.getBeginStep());
+        assertEquals("begin step is different than expected", Long.valueOf(1), executionPlan.getBeginStep());
     }
 
     @Test
@@ -210,7 +218,7 @@ public class ExecutionPlanBuilderTest {
         assertEquals("different number of execution steps than expected", 4, executionPlan.getSteps().size());
         assertEquals("flow name is different than expected", flowName, executionPlan.getName());
         assertEquals("language name is different than expected", "CloudSlang", executionPlan.getLanguage());
-        assertEquals("begin step is different than expected", new Long(1), executionPlan.getBeginStep());
+        assertEquals("begin step is different than expected", Long.valueOf(1), executionPlan.getBeginStep());
     }
 
     @Test
@@ -252,7 +260,7 @@ public class ExecutionPlanBuilderTest {
         assertEquals("different number of execution steps than expected", 6, executionPlan.getSteps().size());
         assertEquals("flow name is different than expected", flowName, executionPlan.getName());
         assertEquals("language name is different than expected", "CloudSlang", executionPlan.getLanguage());
-        assertEquals("begin step is different than expected", new Long(1), executionPlan.getBeginStep());
+        assertEquals("begin step is different than expected", Long.valueOf(1), executionPlan.getBeginStep());
     }
 
     @Test
@@ -296,7 +304,7 @@ public class ExecutionPlanBuilderTest {
         assertEquals("different number of execution steps than expected", 6, executionPlan.getSteps().size());
         assertEquals("flow name is different than expected", flowName, executionPlan.getName());
         assertEquals("language name is different than expected", "CloudSlang", executionPlan.getLanguage());
-        assertEquals("begin step is different than expected", new Long(1), executionPlan.getBeginStep());
+        assertEquals("begin step is different than expected", Long.valueOf(1), executionPlan.getBeginStep());
     }
 
     @Test
